[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-providers"
version = "0.1.0"
description = "Framework-agnostic avatar session management (HeyGen + Tavus)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
include = ["avatar_providers*"]

